started getting recently played to homescreen, need to work on re-auth after 1hr

--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "express-session": "^1.16.2",
     "form-data": "^2.3.3",
     "massive": "^5.11.0",
+    "node-sass": "^4.12.0",
     "pg-promise": "^8.7.2",
     "qs": "^6.7.0",
+    "query-string": "^6.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
     "redux-promise-middleware": "^6.1.0"
   },
   "scripts": {
@@ -43,7 +46,9 @@
   },
   "proxy": "http://localhost:3001",
   "main": "server/index.js",
-  "nodemonConfig": [
-    "src/*"
-  ]
+  "nodemonConfig": {
+    "ignore": [
+      "src/*"
+    ]
+  }
 }
