--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-virtualized": "^9.21.1",
     "redux": "^4.0.1",
     "redux-promise-middleware": "^6.1.0"
   },
