--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "redux-promise-middleware": "^6.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
